Feat: Implment scoring system

--- a/index.html
+++ b/index.html
@@ -12,5 +12,6 @@
 <body>
     <h1 class="title">SNAKE</h1>
     <canvas id="canvas"></canvas>
+    <p>SCORE: <span id="score">0</span></p>
 </body>
 </html>
